# pycodemetrics

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml  renovate.json  tox.ini
.ai_guideline/: guideline.md
.ai_guideline/coding/: coding_guidelines.md
.ai_guideline/project/: project_structure.md
.ai_guideline/testing/: testing_guidelines.md
.cursor/rules/: coding-guidline.mdc
.github/workflows/: ci.yml  create_version_tag.yml  pr-checks.yml  pr-title-check.yml  publish_python_package.yml
docs/src/: 001_introduction.adoc  002_instration.adoc  003_usage.adoc  index.adoc
pycodemetrics/: python.py
pycodemetrics/gitclient/: gitcli.py  gitlog_parser.py  models.py
pycodemetrics/metrics/py/: cc_wrapper.py  python_metrics.py
src/pycodemetrics/: __init__.py  __main__.py  cli.py  main.py
src/pycodemetrics/cli/: __init__.py  analyze_python_metrics.py  cli.py  cli_analyze_python_metrics.py  sandbox.py
src/pycodemetrics/cli/analyze_committer/: cli.py  handler.py
src/pycodemetrics/cli/analyze_coupling/: cli.py  handler.py
src/pycodemetrics/cli/analyze_health/: cli.py  handler.py
src/pycodemetrics/cli/analyze_hotspot/: cli.py  handler.py
src/pycodemetrics/cli/analyze_python/: __init__.py  cli.py  handler.py
src/pycodemetrics/config/: __init__.py  config_manager.py
src/pycodemetrics/gitclient/: __init__.py  gitlog_parser.py  models.py
src/pycodemetrics/metrics/: __init__.py  changecount.py  coupling.py  health.py  hotspot.py
src/pycodemetrics/metrics/changelog/: hotspot.py
src/pycodemetrics/metrics/py/: cognitive_complexity.py  import_analyzer.py  python_metrics.py  radon_wrapper.py
src/pycodemetrics/metrics/py/raw/: __init__.py  cc_wrapper.py  radon_wrapper.py
src/pycodemetrics/services/: __init__.py  analyze_changelogs.py  analyze_committer.py  analyze_coupling.py  analyze_health.py  analyze_hotspot.py  analyze_python_metrics.py
src/pycodemetrics/util/: __init__.py  file_util.py
tests/pycodemetrics/: test_main.py
tests/pycodemetrics/cli/: test_cli.py  test_cli_analyze_python_metrics.py  test_display_util.py  test_exporter.py
tests/pycodemetrics/cli/analyze_health/: test_handler.py
tests/pycodemetrics/cli/analyze_python/: test_handler.py
tests/pycodemetrics/config/: test_config_manager.py
tests/pycodemetrics/gitclient/: test_gitcli.py  test_gitlog_parser.py
tests/pycodemetrics/metrics/: test_changecount.py  test_coupling.py  test_hotspot.py
tests/pycodemetrics/metrics/changelog/: test_hotspot.py
tests/pycodemetrics/metrics/py/: test_cognitive_complexity.py  test_import_analyzer.py  test_python_metrics.py
tests/pycodemetrics/metrics/py/raw/: test_cc_wrapper.py  test_radon_wrapper.py
tests/pycodemetrics/services/: test_analyze_coupling.py  test_analyze_python_metrics.py
tests/pycodemetrics/util/: test_file_util.py
