[tool.poetry]
authors = ["mmocchi"]
description = ""
name = "pycodemetrics"
readme = "README.md"
version = "0.1.0"

packages = [{include = "pycodemetrics", from = "src"}]

[tool.poetry.dependencies]
click = "^8.1.7"
cognitive-complexity = "^1.3.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240603"
pydantic = "^2.8.2"
python = "^3.12"
radon = "^6.0.1"
tabulate = "^0.9.0"
tqdm = "^4.66.4"
types-tabulate = "^0.9.0.20240106"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.dev.dependencies]
chardet = "^5.2.0"
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.5"
taskipy = "^1.13.0"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
pycodemetrics = "pycodemetrics.__main__:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = "--cov=src/pycodemetrics --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/pycodemetrics"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pass",
  "except ImportError:",
]

[tool.taskipy.tasks]
lint = "ruff check ."
mypy = "mypy src"
summary = "python generate_project_summary.py"
test = "pytest tests"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
ignore_missing_imports = true
